[gd_scene load_steps=7 format=3 uid="uid://cod24ckfw2t7s"]

[ext_resource type="Script" uid="uid://2hhw1d1m0uf" path="res://levels/test/test_level_tank_swap.gd" id="1_7i8sf"]
[ext_resource type="PackedScene" uid="uid://uaih1d1o2vd7" path="res://levels/game_level.tscn" id="1_yvxur"]
[ext_resource type="PackedScene" uid="uid://dmtjm8de7ep32" path="res://controller/ai/ai_tank.tscn" id="2_7i8sf"]
[ext_resource type="PackedScene" uid="uid://c5g3m0l3ccwf1" path="res://controller/ai/behaviors/lobber_ai_behavior.tscn" id="3_6ksxt"]
[ext_resource type="PackedScene" uid="uid://cq5edhs86n8r1" path="res://buildings/house.tscn" id="4_673sy"]
[ext_resource type="PackedScene" uid="uid://dps6lqs28tqa1" path="res://controller/player/player.tscn" id="5_jyhgv"]

[node name="TestLevel01" type="Node2D"]
script = ExtResource("1_7i8sf")

[node name="GameLevel" parent="." instance=ExtResource("1_yvxur")]

[node name="RoundDirector" parent="GameLevel" index="7"]
player_goes_first = true
shuffle_order = false

[node name="Enemy1" parent="GameLevel" instance=ExtResource("2_7i8sf")]
position = Vector2(479, 278)

[node name="Tank" parent="GameLevel/Enemy1" index="0"]
color = Color(0.682353, 0.713726, 0.219608, 1)

[node name="LobberAiBehavior" parent="GameLevel/Enemy1/StateMachine" index="0" instance=ExtResource("3_6ksxt")]
forces_mask = 15

[node name="Enemy2" parent="GameLevel" instance=ExtResource("2_7i8sf")]
position = Vector2(1100, 426)

[node name="Tank" parent="GameLevel/Enemy2" index="0"]
color = Color(0.137255, 0.180392, 0.701961, 1)

[node name="LobberAiBehavior" parent="GameLevel/Enemy2/StateMachine" index="0" instance=ExtResource("3_6ksxt")]
forces_mask = 15

[node name="House1" parent="GameLevel" instance=ExtResource("4_673sy")]
position = Vector2(43, 409)

[node name="House2" parent="GameLevel" instance=ExtResource("4_673sy")]
position = Vector2(934, 407)

[node name="Player" parent="GameLevel" instance=ExtResource("5_jyhgv")]
position = Vector2(120, 427)

[editable path="GameLevel"]
[editable path="GameLevel/Walls"]
[editable path="GameLevel/Enemy1"]
[editable path="GameLevel/Enemy2"]
